Add ignore_user_rc configuration option
Add ignore_user_rc configuration option that controls whether or not
the $HOME/.modulerc file should be ignored. Disabled by default. When
configuration is modified it sets the MODULES_IGNORE_USER_RC environment
variable.

--ignore-user-rc command line switch can be used to enable
ignore_user_rc for current execution.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -1031,6 +1031,9 @@ if {[catch {
             --ignore-cache - --ignore_cache {
                set asked_ignore_cache 1
             }
+            --ignore-user-rc {
+               set asked_ignore_user_rc 1
+            }
             --timer {
                setState timer 1
                set timer_start [clock microseconds]
