--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1846,7 +1846,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
-   ##nagelfar ignore #109 Too long line
+   ##nagelfar ignore #111 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
@@ -1941,6 +1941,8 @@ Switches:
                   or 'switch' sub-commands (LIST is made of tag names
                   separated by ':')
   --ignore-cache  Ignore module cache
+  --ignore-user-rc
+                  Skip evaluation of user-specific module rc file
 
 Options:
   -h | --help     This usage info
