--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -87,6 +87,7 @@ array set g_config_defs [list\
    home {MODULESHOME {@moduleshome@} 0}\
    icase {MODULES_ICASE @icase@ 0 {never search always}}\
    ignore_cache {MODULES_IGNORE_CACHE 0 0 {0 1}}\
+   ignore_user_rc {MODULES_IGNORE_USER_RC 0 0 {0 1}}\
    ignored_dirs {{} {CVS RCS SCCS .svn .git .SYNC .sos} 0}\
    implicit_requirement {MODULES_IMPLICIT_REQUIREMENT @implicitrequirement@ 0\
       {0 1}}\
