Ignore user rc when ignore_user_rc enabled
Do not evaluate user-specific module rc file when ignore_user_rc
configuration is enabled.

Fixes #479

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -538,7 +538,9 @@ proc getGlobalRcFileList {} {
    if {[file isfile {@etcdir@/rc}]} {
       lappend rclist {@etcdir@/rc}
    }
-   if {[info exists ::env(HOME)] && [file isfile $::env(HOME)/.modulerc]} {
+   # ignore user rc if relative configuration is enabled
+   if {![getConf ignore_user_rc] && [info exists ::env(HOME)] && [file isfile\
+      $::env(HOME)/.modulerc]} {
       lappend rclist $::env(HOME)/.modulerc
    }
 
