Mention 'variant' as --output example value in usage msg

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1936,7 +1936,7 @@ Switches:
   -o LIST | --output=LIST
                   Define elements to output on 'avail' or 'list' sub-commands
                   in addition to module names (LIST is made of items like
-                  'sym', 'tag' or 'key' separated by ':')
+                  'sym', 'tag', 'variant' or 'key' separated by ':')
   -a | --all      Include hidden modules in search
   -d | --default  Only show default versions available
   -L | --latest   Only show latest versions available
