Add value kind attribute in config option definition array
Update configuration option definition array (g_config_defs) to add
value kind attribute as 4th entry in definition list. This attribute has
following possible values: 'i' for integer, 's' for string, 'b' for
boolean, 'l' for colon-separated list, 'o' for other.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -61,81 +61,84 @@ array set g_state_defs [list\
 ]
 
 # Configuration option properties (superseding environment variable, default
-# value, is configuration lockable to default value, valid value list?,
-# internal value representation?, proc to call to initialize option value,
-# valid value list kind
-##nagelfar ignore #64 Too long line
+# value, is configuration lockable to default value, value kind, valid value
+# list?, internal value representation?, proc to call to initialize option
+# value, valid value list kind
+##nagelfar ignore #73 Too long line
 array set g_config_defs [list\
-   contact {MODULECONTACT root@localhost 0}\
-   auto_handling {MODULES_AUTO_HANDLING @autohandling@ 0 {0 1}}\
-   avail_indepth {MODULES_AVAIL_INDEPTH @availindepth@ 0 {0 1}}\
-   avail_output {MODULES_AVAIL_OUTPUT {@availoutput@} 0 {modulepath alias\
+   contact {MODULECONTACT root@localhost 0 s}\
+   auto_handling {MODULES_AUTO_HANDLING @autohandling@ 0 b {0 1}}\
+   avail_indepth {MODULES_AVAIL_INDEPTH @availindepth@ 0 b {0 1}}\
+   avail_output {MODULES_AVAIL_OUTPUT {@availoutput@} 0 l {modulepath alias\
       dirwsym sym tag key variant variantifspec} {} {} eltlist}\
-   avail_terse_output {MODULES_AVAIL_TERSE_OUTPUT {@availterseoutput@} 0\
+   avail_terse_output {MODULES_AVAIL_TERSE_OUTPUT {@availterseoutput@} 0 l\
       {modulepath alias dirwsym sym tag key variant variantifspec} {} {}\
       eltlist}\
-   cache_buffer_bytes {MODULES_CACHE_BUFFER_BYTES 32768 0 {4096 1000000} {}\
+   cache_buffer_bytes {MODULES_CACHE_BUFFER_BYTES 32768 0 i {4096 1000000} {}\
       {} intbe}\
-   cache_expiry_secs {MODULES_CACHE_EXPIRY_SECS 0 0 {0 31536000} {} {} intbe}\
-   collection_pin_version {MODULES_COLLECTION_PIN_VERSION 0 0 {0 1}}\
-   collection_pin_tag {MODULES_COLLECTION_PIN_TAG 0 0 {0 1}}\
-   collection_target {MODULES_COLLECTION_TARGET <undef> 0}\
-   color {MODULES_COLOR @color@ 0 {never auto always} {0 1 2} initConfColor}\
-   colors {MODULES_COLORS {} 0 {} {} initConfColors}\
-   csh_limit {{} 4000 0}\
-   extra_siteconfig {MODULES_SITECONFIG <undef> 1 {}}\
-   editor {MODULES_EDITOR {@editor@} 0 {} {} initConfEditor}\
-   home {MODULESHOME {@moduleshome@} 0}\
-   icase {MODULES_ICASE @icase@ 0 {never search always}}\
-   ignore_cache {MODULES_IGNORE_CACHE 0 0 {0 1}}\
-   ignore_user_rc {MODULES_IGNORE_USER_RC 0 0 {0 1}}\
-   ignored_dirs {{} {CVS RCS SCCS .svn .git .SYNC .sos} 0}\
+   cache_expiry_secs {MODULES_CACHE_EXPIRY_SECS 0 0 i {0 31536000} {} {}\
+      intbe}\
+   collection_pin_version {MODULES_COLLECTION_PIN_VERSION 0 0 b {0 1}}\
+   collection_pin_tag {MODULES_COLLECTION_PIN_TAG 0 0 b {0 1}}\
+   collection_target {MODULES_COLLECTION_TARGET <undef> 0 s}\
+   color {MODULES_COLOR @color@ 0 s {never auto always} {0 1 2}\
+      initConfColor}\
+   colors {MODULES_COLORS {} 0 l {} {} initConfColors}\
+   csh_limit {{} 4000 0 i}\
+   extra_siteconfig {MODULES_SITECONFIG <undef> 1 s {}}\
+   editor {MODULES_EDITOR {@editor@} 0 s {} {} initConfEditor}\
+   home {MODULESHOME {@moduleshome@} 0 s}\
+   icase {MODULES_ICASE @icase@ 0 s {never search always}}\
+   ignore_cache {MODULES_IGNORE_CACHE 0 0 b {0 1}}\
+   ignore_user_rc {MODULES_IGNORE_USER_RC 0 0 b {0 1}}\
+   ignored_dirs {{} {CVS RCS SCCS .svn .git .SYNC .sos} 0 o}\
    implicit_requirement {MODULES_IMPLICIT_REQUIREMENT @implicitrequirement@ 0\
-      {0 1}}\
-   list_output {MODULES_LIST_OUTPUT {@listoutput@} 0 {header idx variant sym\
-      tag key} {} {} eltlist}\
-   list_terse_output {MODULES_LIST_TERSE_OUTPUT {@listterseoutput@} 0 {header\
-      idx variant sym tag key} {} {} eltlist}\
-   locked_configs {{} {@lockedconfigs@} 0}\
-   mcookie_check {MODULES_MCOOKIE_CHECK always 0 {eval always}}\
+      b {0 1}}\
+   list_output {MODULES_LIST_OUTPUT {@listoutput@} 0 l {header idx variant\
+      sym tag key} {} {} eltlist}\
+   list_terse_output {MODULES_LIST_TERSE_OUTPUT {@listterseoutput@} 0 l\
+      {header idx variant sym tag key} {} {} eltlist}\
+   locked_configs {{} {@lockedconfigs@} 0 o}\
+   mcookie_check {MODULES_MCOOKIE_CHECK always 0 s {eval always}}\
    mcookie_version_check {MODULES_MCOOKIE_VERSION_CHECK\
-      @mcookieversioncheck@ 0 {0 1}}\
-   ml {MODULES_ML @ml@ 0 {0 1}}\
+      @mcookieversioncheck@ 0 b {0 1}}\
+   ml {MODULES_ML @ml@ 0 b {0 1}}\
    nearly_forbidden_days {MODULES_NEARLY_FORBIDDEN_DAYS @nearlyforbiddendays@\
-      0 {0 365} {} {} intbe}\
-   pager {MODULES_PAGER {@pagercmd@} 0}\
-   protected_envvars {MODULES_PROTECTED_ENVVARS <undef> 0}\
-   rcfile {MODULERCFILE <undef> 0}\
-   redirect_output {MODULES_REDIRECT_OUTPUT 1 0 {0 1}}\
-   reset_target_state {MODULES_RESET_TARGET_STATE __init__ 0}\
-   quarantine_support {MODULES_QUARANTINE_SUPPORT @quarantinesupport@ 0 {0\
+      0 i {0 365} {} {} intbe}\
+   pager {MODULES_PAGER {@pagercmd@} 0 s}\
+   protected_envvars {MODULES_PROTECTED_ENVVARS <undef> 0 l}\
+   rcfile {MODULERCFILE <undef> 0 s}\
+   redirect_output {MODULES_REDIRECT_OUTPUT 1 0 b {0 1}}\
+   reset_target_state {MODULES_RESET_TARGET_STATE __init__ 0 s}\
+   quarantine_support {MODULES_QUARANTINE_SUPPORT @quarantinesupport@ 0 b {0\
       1}}\
-   run_quarantine {MODULES_RUN_QUARANTINE <undef> 0}\
-   shells_with_ksh_fpath {MODULES_SHELLS_WITH_KSH_FPATH {} 0 {sh bash csh\
+   run_quarantine {MODULES_RUN_QUARANTINE <undef> 0 o}\
+   shells_with_ksh_fpath {MODULES_SHELLS_WITH_KSH_FPATH {} 0 l {sh bash csh\
       tcsh fish} {} {} eltlist}\
-   silent_shell_debug {MODULES_SILENT_SHELL_DEBUG @silentshdbgsupport@ 0 {0\
+   silent_shell_debug {MODULES_SILENT_SHELL_DEBUG @silentshdbgsupport@ 0 b {0\
       1}}\
-   siteconfig {{} {@etcdir@/siteconfig.tcl} 0}\
-   tag_abbrev {MODULES_TAG_ABBREV {@tagabbrev@} 0 {} {} initConfTagAbbrev}\
-   tag_color_name {MODULES_TAG_COLOR_NAME {@tagcolorname@} 0 {} {}\
+   siteconfig {{} {@etcdir@/siteconfig.tcl} 0 s}\
+   tag_abbrev {MODULES_TAG_ABBREV {@tagabbrev@} 0 l {} {} initConfTagAbbrev}\
+   tag_color_name {MODULES_TAG_COLOR_NAME {@tagcolorname@} 0 l {} {}\
       initConfTagColorName}\
-   tcl_ext_lib {{} {} 0 {} {} initConfTclExtLib}\
-   tcl_linter {MODULES_TCL_LINTER {@tcllintercmd@} 0}\
-   term_background {MODULES_TERM_BACKGROUND @termbg@ 0 {dark light}}\
-   term_width {MODULES_TERM_WIDTH 0 0 {0 1000} {} {} intbe}\
-   unload_match_order {MODULES_UNLOAD_MATCH_ORDER @unloadmatchorder@ 0\
+   tcl_ext_lib {{} {} 0 s {} {} initConfTclExtLib}\
+   tcl_linter {MODULES_TCL_LINTER {@tcllintercmd@} 0 s}\
+   term_background {MODULES_TERM_BACKGROUND @termbg@ 0 s {dark light}}\
+   term_width {MODULES_TERM_WIDTH 0 0 i {0 1000} {} {} intbe}\
+   unload_match_order {MODULES_UNLOAD_MATCH_ORDER @unloadmatchorder@ 0 s\
       {returnlast returnfirst}}\
-   implicit_default {MODULES_IMPLICIT_DEFAULT @implicitdefault@ 1 {0 1}}\
-   extended_default {MODULES_EXTENDED_DEFAULT @extendeddefault@ 0 {0 1}}\
-   advanced_version_spec {MODULES_ADVANCED_VERSION_SPEC @advversspec@ 0 {0\
+   implicit_default {MODULES_IMPLICIT_DEFAULT @implicitdefault@ 1 b {0 1}}\
+   extended_default {MODULES_EXTENDED_DEFAULT @extendeddefault@ 0 b {0 1}}\
+   advanced_version_spec {MODULES_ADVANCED_VERSION_SPEC @advversspec@ 0 b {0\
       1}}\
-   search_match {MODULES_SEARCH_MATCH @searchmatch@ 0 {starts_with contains}}\
-   set_shell_startup {MODULES_SET_SHELL_STARTUP @setshellstartup@ 0 {0 1}}\
-   variant_shortcut {MODULES_VARIANT_SHORTCUT {@variantshortcut@} 0 {} {}\
+   search_match {MODULES_SEARCH_MATCH @searchmatch@ 0 s {starts_with\
+      contains}}\
+   set_shell_startup {MODULES_SET_SHELL_STARTUP @setshellstartup@ 0 b {0 1}}\
+   variant_shortcut {MODULES_VARIANT_SHORTCUT {@variantshortcut@} 0 l {} {}\
       initConfVariantShortcut}\
-   verbosity {MODULES_VERBOSITY @verbosity@ 0 {silent concise normal verbose\
-      verbose2 trace debug debug2}}\
-   wa_277 {MODULES_WA_277 @wa277@ 0 {0 1}}\
+   verbosity {MODULES_VERBOSITY @verbosity@ 0 s {silent concise normal\
+      verbose verbose2 trace debug debug2}}\
+   wa_277 {MODULES_WA_277 @wa277@ 0 b {0 1}}\
 ]
 
 # Get state value
@@ -245,8 +248,8 @@ proc isConfigLocked {option} {
 proc getConf {option {valifundef {}}} {
    if {![info exists ::g_configs($option)]} {
       # fetch option properties (including its default value)
-      lassign $::g_config_defs($option) envvar value islockable validvallist\
-         intvallist initproc validvallistkind
+      lassign $::g_config_defs($option) envvar value islockable valuekind\
+         validvallist intvallist initproc validvallistkind
 
       # ensure option is not locked before superseding its default value
       if {!$islockable || ![isConfigLocked $option]} {
@@ -757,9 +760,9 @@ proc initConfVariantShortcut {envvar value validvallist intvallist} {
 
 # Is currently set verbosity level is equal or higher than level passed as arg
 proc isVerbosityLevel {name} {
-   return [expr {[lsearch -exact [lindex $::g_config_defs(verbosity) 3]\
+   return [expr {[lsearch -exact [lindex $::g_config_defs(verbosity) 4]\
       [getConf verbosity]] >= [lsearch -exact [lindex\
-      $::g_config_defs(verbosity) 3] $name]}]
+      $::g_config_defs(verbosity) 4] $name]}]
 }
 
 # Is match performed in a case sensitive or insensitive manner
