--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2316,8 +2316,8 @@ proc cmdModuleConfig {dump_state args} {
 
    foreach option [array names ::g_config_defs] {
       lassign $::g_config_defs($option) confvar($option) defval\
-         conflockable($option) confvalid($option) vtrans initproc\
-         confvalidkind($option)
+         conflockable($option) confkind($option) confvalid($option) vtrans\
+         initproc confvalidkind($option)
       set confval($option) [getConf $option <undef>]
       set confvtrans($option) {}
       for {set i 0} {$i < [llength $vtrans]} {incr i} {
@@ -2334,6 +2334,7 @@ proc cmdModuleConfig {dump_state args} {
       set confvar($runenvconf) $runenvvar
       set confvalid($runenvconf) {}
       set conflockable($runenvconf) {}
+      set confkind($runenvconf) s
       set confvtrans($runenvconf) {}
       set confvalidkind($runenvconf) {}
    }
