Allow to pass value starting with '-' on config subcmd
Allow to pass configuration option value starting with minus sign (-) on
config sub-command. Was previously mistaken with command-line switches.
This change allows to subtract a value to a configuration option already
set.

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -1067,9 +1067,10 @@ if {[catch {
                      lassign [parseModuleCommandName $subcmdtest {}]\
                         subcmdtest
                   }
-                  # accepted if command is ml or if adv vers spec is enabled
-                  # and command can receive boolean variant specification
-                  set accept_minus_arg [expr {$subcmdtest eq {ml} ||\
+                  # accepted if command is ml or config or if adv vers spec is
+                  # enabled and command can receive boolean variant
+                  # specification
+                  set accept_minus_arg [expr {$subcmdtest in {ml config} ||\
                      ([getConf advanced_version_spec] && $subcmdtest in\
                      {avail list display help is-avail is-loaded load path\
                      paths switch test unload whatis mod-to-sh source})}]
