--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -2,7 +2,7 @@
 %global vimdatadir %{_datadir}/vim/vimfiles
 
 Name:           environment-modules
-Version:        5.2.0
+Version:        5.3.0
 Release:        @MODULES_RPM_RELEASE@%{?dist}
 Summary:        Provides dynamic modification of a user's environment
 
@@ -227,6 +227,10 @@ fi
 
 
 %changelog
+* Sun May 14 2023 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.3.0-1
+- Update to 5.3.0
+- Migrate to SPDX license format
+
 * Tue Nov 08 2022 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.2.0-1
 - Update to 5.2.0
 - Recommends Nagelfar Tcl syntax linter
