Standardize way to call whatis sub-command

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -188,8 +188,13 @@ proc cmdModulePath {mod} {
    }
 }
 
-proc cmdModuleWhatIs {{mod {}}} {
-   cmdModuleSearch $mod {}
+proc cmdModuleWhatis {args} {
+   if {[llength $args] == 0} {
+      lappend args {}
+   }
+   foreach mod $args {
+      cmdModuleSearch $mod {}
+   }
 }
 
 proc cmdModuleApropos {{search {}}} {
