Standardize way to call search sub-command

--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -500,6 +500,9 @@ proc module {command args} {
          lappend cmdopts $show_oneperline $show_mtime $show_filter\
             $search_filter $search_match
       }
+      search {
+         lappend cmdopts {}
+      }
       list - savelist {
          lappend cmdopts $show_oneperline $show_mtime $search_match
       }
@@ -670,9 +673,6 @@ proc module {command args} {
                }
             }
          }
-      }
-      search {
-         cmdModuleApropos {*}$args
       }
       clear {
          # ensure empty string is correctly passed
